// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[TodoView] [ui] comfirm button click 1`] = `
"<div class=\\"row align-items-center\\">
  <div class=\\"col-1 view\\">
    <i class=\\"material-icons text-secondary icon-btn\\" id=\\"completed\\">check_box_outline_blank</i>
  </div>
  <div class=\\"col-8 view\\">
    <span class=\\"view title\\">dummy-confirm</span>
  </div>
  <div class=\\"col-9 view hidden\\">
    <input type=\\"text\\" class=\\"form-control form-control-sm\\" id=\\"edit-title\\" name=\\"edit-title\\" value=\\"dummy-confirm\\">
  </div>
  <div class=\\"col-3 text-right \\">
    <i class=\\"material-icons text-success icon-btn view\\" id=\\"edit\\">mode_edit</i>
    <i class=\\"material-icons text-danger icon-btn view\\" id=\\"delete\\">delete</i>
    <i class=\\"material-icons text-success icon-btn view hidden\\" id=\\"confirm\\">save</i>
    <i class=\\"material-icons text-warning icon-btn view hidden\\" id=\\"cancel\\">cancel</i>
  </div>
</div>"
`;

exports[`[TodoView] [ui] delete button click 1`] = `"<ul class=\\"list-group list-group-flush\\" id=\\"list\\"></ul>"`;

exports[`[TodoView] [ui] edit - keypress event 1`] = `
"<div class=\\"row align-items-center\\">
  <div class=\\"col-1 view hidden\\">
    <i class=\\"material-icons text-secondary icon-btn\\" id=\\"completed\\">check_box_outline_blank</i>
  </div>
  <div class=\\"col-8 view hidden\\">
    <span class=\\"view title hidden\\">dummy-confirm</span>
  </div>
  <div class=\\"col-9 view\\">
    <input type=\\"text\\" class=\\"form-control form-control-sm\\" id=\\"edit-title\\" name=\\"edit-title\\" value=\\"dummy-confirm\\">
  </div>
  <div class=\\"col-3 text-right \\">
    <i class=\\"material-icons text-success icon-btn view hidden\\" id=\\"edit\\">mode_edit</i>
    <i class=\\"material-icons text-danger icon-btn view hidden\\" id=\\"delete\\">delete</i>
    <i class=\\"material-icons text-success icon-btn view\\" id=\\"confirm\\">save</i>
    <i class=\\"material-icons text-warning icon-btn view\\" id=\\"cancel\\">cancel</i>
  </div>
</div>"
`;

exports[`[TodoView] [ui] edit button click 1`] = `
"<div class=\\"row align-items-center\\">
  <div class=\\"col-1 view hidden\\">
    <i class=\\"material-icons text-secondary icon-btn\\" id=\\"completed\\">check_box_outline_blank</i>
  </div>
  <div class=\\"col-8 view hidden\\">
    <span class=\\"view title hidden\\">dummy-change</span>
  </div>
  <div class=\\"col-9 view\\">
    <input type=\\"text\\" class=\\"form-control form-control-sm\\" id=\\"edit-title\\" name=\\"edit-title\\" value=\\"dummy-change\\">
  </div>
  <div class=\\"col-3 text-right \\">
    <i class=\\"material-icons text-success icon-btn view hidden\\" id=\\"edit\\">mode_edit</i>
    <i class=\\"material-icons text-danger icon-btn view hidden\\" id=\\"delete\\">delete</i>
    <i class=\\"material-icons text-success icon-btn view\\" id=\\"confirm\\">save</i>
    <i class=\\"material-icons text-warning icon-btn view\\" id=\\"cancel\\">cancel</i>
  </div>
</div>"
`;

exports[`[TodoView] [ui] title click 1`] = `
"<div class=\\"row align-items-center\\">
  <div class=\\"col-1 view\\">
    <i class=\\"material-icons text-secondary icon-btn\\" id=\\"completed\\">check_box_outline_blank</i>
  </div>
  <div class=\\"col-8 view\\">
    <span class=\\"view title\\">dummy-change</span>
  </div>
  <div class=\\"col-9 view hidden\\">
    <input type=\\"text\\" class=\\"form-control form-control-sm\\" id=\\"edit-title\\" name=\\"edit-title\\" value=\\"dummy-change\\">
  </div>
  <div class=\\"col-3 text-right \\">
    <i class=\\"material-icons text-success icon-btn view\\" id=\\"edit\\">mode_edit</i>
    <i class=\\"material-icons text-danger icon-btn view\\" id=\\"delete\\">delete</i>
    <i class=\\"material-icons text-success icon-btn view hidden\\" id=\\"confirm\\">save</i>
    <i class=\\"material-icons text-warning icon-btn view hidden\\" id=\\"cancel\\">cancel</i>
  </div>
</div>"
`;

exports[`[TodoView] init 1`] = `
"<ul class=\\"list-group list-group-flush\\" id=\\"list\\"><li class=\\"list-group-item p-2\\"><div class=\\"row align-items-center\\">
  <div class=\\"col-1 view\\">
    <i class=\\"material-icons text-secondary icon-btn\\" id=\\"completed\\">check_box_outline_blank</i>
  </div>
  <div class=\\"col-8 view\\">
    <span class=\\"view title\\">dummy</span>
  </div>
  <div class=\\"col-9 view hidden\\">
    <input type=\\"text\\" class=\\"form-control form-control-sm\\" id=\\"edit-title\\" name=\\"edit-title\\" value=\\"dummy\\">
  </div>
  <div class=\\"col-3 text-right \\">
    <i class=\\"material-icons text-success icon-btn view\\" id=\\"edit\\">mode_edit</i>
    <i class=\\"material-icons text-danger icon-btn view\\" id=\\"delete\\">delete</i>
    <i class=\\"material-icons text-success icon-btn view hidden\\" id=\\"confirm\\">save</i>
    <i class=\\"material-icons text-warning icon-btn view hidden\\" id=\\"cancel\\">cancel</i>
  </div>
</div></li></ul>"
`;

exports[`[TodoView] model set - [event] change 1`] = `
"<div class=\\"row align-items-center\\">
  <div class=\\"col-1 view\\">
    <i class=\\"material-icons text-secondary icon-btn\\" id=\\"completed\\">check_box_outline_blank</i>
  </div>
  <div class=\\"col-8 view\\">
    <span class=\\"view title\\">dummy-change</span>
  </div>
  <div class=\\"col-9 view hidden\\">
    <input type=\\"text\\" class=\\"form-control form-control-sm\\" id=\\"edit-title\\" name=\\"edit-title\\" value=\\"dummy-change\\">
  </div>
  <div class=\\"col-3 text-right \\">
    <i class=\\"material-icons text-success icon-btn view\\" id=\\"edit\\">mode_edit</i>
    <i class=\\"material-icons text-danger icon-btn view\\" id=\\"delete\\">delete</i>
    <i class=\\"material-icons text-success icon-btn view hidden\\" id=\\"confirm\\">save</i>
    <i class=\\"material-icons text-warning icon-btn view hidden\\" id=\\"cancel\\">cancel</i>
  </div>
</div>"
`;

exports[`[TodoView] model toggle - [event] toggle 1`] = `
"<div class=\\"row align-items-center\\">
  <div class=\\"col-1 view\\">
    <i class=\\"material-icons text-secondary icon-btn\\" id=\\"completed\\">check_box</i>
  </div>
  <div class=\\"col-8 view\\">
    <span class=\\"view title completed\\">dummy-change</span>
  </div>
  <div class=\\"col-9 view hidden\\">
    <input type=\\"text\\" class=\\"form-control form-control-sm\\" id=\\"edit-title\\" name=\\"edit-title\\" value=\\"dummy-change\\">
  </div>
  <div class=\\"col-3 text-right \\">
    <i class=\\"material-icons text-success icon-btn view\\" id=\\"edit\\">mode_edit</i>
    <i class=\\"material-icons text-danger icon-btn view\\" id=\\"delete\\">delete</i>
    <i class=\\"material-icons text-success icon-btn view hidden\\" id=\\"confirm\\">save</i>
    <i class=\\"material-icons text-warning icon-btn view hidden\\" id=\\"cancel\\">cancel</i>
  </div>
</div>"
`;
